--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
+    "rsuite": "^5.70.0",
     "sweetalert2": "^11.12.4",
     "web-vitals": "^2.1.4"
   },
